<resources>
    <string name="app_name">birds-of-a-feather-team-19</string>
    <string name="toast_add_course">Course added</string>
    <string name="toast_add_mock_user">Mock user added</string>
    <string name="TAG">BoF</string>
    <string name="sort_by">Sort By</string>
    <string name="filter_by">Filter By</string>
    <string-array name="year">
        <item>2022</item>
        <item>2021</item>
        <item>2020</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
    </string-array>
    <string-array name="quarter">
        <item>Spring</item>
        <item>Summer Session 1</item>
        <item>Summer Session 2</item>
        <item>Special Summer Session</item>
        <item>Fall</item>
        <item>Winter</item>
    </string-array>
    <string-array name="size">
        <item>Tiny (&lt;40)</item>
        <item>Small (40-75)</item>
        <item>Medium (75-150)</item>
        <item>Large (150-250)</item>
        <item>Huge (250-400)</item>
        <item>Gigantic (400+)</item>
    </string-array>
    <string-array name="sort_type">
        <item>Default</item>
        <item>Course Recency</item>
        <item>Course Size</item>
    </string-array>
    <string-array name="filter_type">
        <item>None</item>
        <item>Favorite</item>
    </string-array>
</resources>